# cascade

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/triangles/: CMakeLists.txt  triangles_gdi.cpp  triangles_ppm.cpp  win32_gdi_triangle.cpp
include/: rasterizer.h
include/cascade/: command_buffer.h  fragment_ops.h  rasterizer.h
include/cascade/common/: vec2.h
platform/win32/: win_platform.cpp
src/: CMakeLists.txt  fragment_ops.h  ptr_utils.h  rasterizer.cpp  vec2.h  win_platform.cpp
src/detail/: ptr_utils.h
src/fragment_ops/: CMakeLists.txt  fragment_ops.cpp
src/rasterizer/: CMakeLists.txt  rasterizer.cpp  rasterizer.h
